# aviary-sdk

./: README.md  pyproject.toml
aviary_sdk/: __init__.py  _response.py  acc.py  bird.py  oneshot.py  openai.py
tests/: test_acc.py  test_bird.py  test_oneshot.py
