# aviary-sdk — a bird's faces for free (ARCHITECTURE.md §5.1).
# Zero runtime dependencies: stdlib http.server + sqlite3 only.
# Birds depend on it by path:
#   uv-run script header:   # dependencies = ["aviary-sdk @ file:///home/andrew/Obsidian/aviary/sdk"]
#   or project pyproject:   [tool.uv.sources] aviary-sdk = { path = "../sdk" }

[project]
name = "aviary-sdk"
version = "0.3.0"
description = "Aviary bird runtime: crop store + /birdz + /mcp + /acc faces, and oneshot() — OpenAI-Response-shaped GPT calls on the codex ChatGPT sub"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
# Rebuild the wheel whenever SDK source changes — the default cache key
# (pyproject.toml only) leaves birds running stale SDK code after edits.
cache-keys = [{ file = "pyproject.toml" }, { file = "aviary_sdk/**/*.py" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aviary_sdk"]
